--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -9,9 +9,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - uses: ./
-        with:
-          repository: bartvanremortele/release-notify-action
-      - uses: ./
-        with:
-          owner: bartvanremortele
-          repo: release-notify-action
+        env:
+          SENDGRID_API_TOKEN: ${{ secrets.SENDGRID_API_TOKEN }}
+          RECIPIENTS: ${{ secrets.RECIPIENTS }}
