--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,3 +12,4 @@ jobs:
         env:
           SENDGRID_API_TOKEN: ${{ secrets.SENDGRID_API_TOKEN }}
           RECIPIENTS: ${{ secrets.RECIPIENTS }}
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
