--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,10 +1,18 @@
 name: Test
-on: [push]
+on:
+  push:
+    branches:
+      - master
+  watch:
+    types: [started]
 
 jobs:
   build:
     name: Test
     runs-on: ubuntu-latest
+
+    if: github.actor == github.event.repository.owner.login
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
